# CredBRT

./: .gitignore  README.md  live_report.json  pyproject.toml  sample_auth.jsonl
credbrt/: cli.py  config.py
credbrt/alerting/: notifier.py
credbrt/detection/: credential_stuffing.py  device_fingerprint.py  fingerprint.py  geo_anomaly.py  low_and_slow.py  session_hijack.py  threat_intel.py  velocity.py
credbrt/ingestion/: live_generator.py  log_tailer.py  simulator.py
credbrt/reporting/: export.py
credbrt/scoring/: risk_engine.py
credbrt/storage/: db.py  models.py
credbrt/ui/: dashboard.py  theme.py  widgets.py
